--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="navigation_drawer_open">Otwórz menu</string>
     <string name="navigation_drawer_close">Zamknij menu</string>
-    <string name="drawer_item_agenda">Agenda</string>
+    <string name="drawer_item_schedule">Agenda</string>
     <string name="drawer_item_speakers">Prelegenci</string>
 </resources>
