--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="navigation_drawer_close">Zamknij menu</string>
     <string name="drawer_item_schedule">Agenda</string>
     <string name="drawer_item_speakers">Prelegenci</string>
+
+    <!-- Speech slots -->
+    <string name="speech_slots_first">10:00 - 11:00</string>
+    <string name="speech_slots_second">11:15 - 12:15</string>
+    <string name="speech_slots_third">13:15 - 14:15</string>
+    <string name="speech_slots_fourth">14:30 - 15:30</string>
+    <string name="speech_slots_fifth">15:45 - 16:45</string>
+    <string name="speech_slots_sixth">17:00 - 18:00</string>
 </resources>
