--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="drawer_item_my_schedule">Moja konferencja</string>
     <string name="drawer_item_sponsors">Sponsorzy</string>
     <string name="drawer_item_navigation">Dojazd</string>
+    <string name="drawer_item_twitter">Twitter feed</string>
+
     <string name="toolbar_title_speech">Prelekcja</string>
     <string name="toolbar_title_speaker">Prelegent</string>
 
