--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,11 +15,14 @@
     <string name="toolbar_title_speech">Prelekcja</string>
     <string name="toolbar_title_speaker">Prelegent</string>
 
-    <string name="my_schedule_path">ŚCIEŻKA</string>
-
     <string name="speech_added_to_favorites">Prelekcja dodana do ulubionych</string>
     <string name="speech_removed_from_favorites">Prelekcja usunięta z ulubionych</string>
     <string name="speech_play_youtube_video">Obejrzyj na youtube</string>
 
     <string name="my_schedule_empty_slot_text">Wybierz prelekcję</string>
+    <string-array name="my_schedule_speech_location">
+        <item>Audytorium</item>
+        <item>Sala A-B</item>
+        <item>Sala C-D</item>
+    </string-array>
 </resources>
